force-app/main/default/objects/Portfolio_Code__mdt/Portfolio_Code__mdt.object-meta.xml
<CustomObject>
    <label>Portfolio Code</label>
    <pluralLabel>Portfolio Codes</pluralLabel>
</CustomObject>