force-app/main/default/objects/Portfolio_Code__mdt/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schwab Trust</fullName>
                <default>true</default>
                <label>Schwab Trust</label>
            </value>
            <value>
                <fullName>Schwab &amp; Co., Inc.</fullName>
            </value>
            <value>
                <fullName>MG Trust Company, LLC.</fullName>
            </value>
            <value>
                <fullName>National Financial Services</fullName>
            </value>
            <value>
                <fullName>TD Ameritrade</fullName>
            </value>
            <value>
                <fullName>Scottrade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>