force-app/main/default/objects/Portfolio_Code__mdt/fields/Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Fund_List__c</fullName>
    <label>Fund List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CensiblyYours</fullName>
                <default>true</default>
                <label>CensiblyYours</label>
            </value>
            <value>
                <fullName>Custom List</fullName>
            </value>
            <value>
                <fullName>Fidelity Extended</fullName>
            </value>
            <value>
                <fullName>Fidelity Index</fullName>
            </value>
            <value>
                <fullName>Matrix RIA/Direct Fund List</fullName>
            </value>
            <value>
                <fullName>Morningstar ETF List</fullName>
            </value>
            <value>
                <fullName>Morningstar I-Class RIA List</fullName>
            </value>
            <value>
                <fullName>Morningstar New York Life Fund List</fullName>
            </value>
            <value>
                <fullName>Morningstar Schwab</fullName>
            </value>
            <value>
                <fullName>Nuveen Target Date &amp; Vanguard Index</fullName>
            </value>
            <value>
                <fullName>Schwab Index Advantage list</fullName>
            </value>
            <value>
                <fullName>Vanguard Admiral Shares Fund List</fullName>
            </value>
            <value>
                <fullName>Vanguard Long List</fullName>
            </value>
            <value>
                <fullName>Vanguard RIA List</fullName>
            </value>
            <value>
                <fullName>Fidelity / Vanguard</fullName>
            </value>
            <value>
                <fullName>Morningstar R Shares</fullName>
            </value>
            <value>
                <fullName>MML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>