force-app/main/default/objects/Portfolio_Code__mdt/fields/X3_38_Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>X3_38_Asset_Manager__c</fullName>
    <label>(3)38 Asset Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wilshire</fullName>
                <default>true</default>
                <label>Wilshire</label>
            </value>
            <value>
                <fullName>Kaye Capital</fullName>
            </value>
            <value>
                <fullName>Morningstar</fullName>
            </value>
            <value>
                <fullName>MML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>