force-app/main/default/objects/Portfolio_Code__mdt/listViews/My_view.listView-meta.xml
<ListView>
    <fullName>My_view</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Fund_List__c</columns>
    <columns>X3_38_Asset_Manager__c</columns>
    <columns>Custodian__c</columns>
    <filterScope>Everything</filterScope>
    <label>My view</label>
    <language>en_US</language>
</ListView>